crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__regex_name.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "name",
      "type": "attr"
    },
    "op": "regex_match",
    "raw": "name =~ ^[A-Z]",
    "rhs": {
      "pattern": "^[A-Z]",
      "type": "regex"
    },
    "type": "atom"
  }
}
