crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__regex_rhs_comparison_text.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "text",
      "type": "attr"
    },
    "op": "regex_match",
    "raw": "text =~ ^count\\(.+\\) <= 20$",
    "rhs": {
      "pattern": "^count\\(.+\\) <= 20$",
      "type": "regex"
    },
    "type": "atom"
  }
}
