crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__regex_rhs_operator_chars.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "name",
      "type": "attr"
    },
    "op": "regex_match",
    "raw": "name =~ ^get<=fast$",
    "rhs": {
      "pattern": "^get<=fast$",
      "type": "regex"
    },
    "type": "atom"
  }
}
