crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__shape_eq.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "shape",
      "type": "attr"
    },
    "op": "eq",
    "raw": "shape = 'callable'",
    "rhs": {
      "type": "string",
      "value": "callable"
    },
    "type": "atom"
  }
}
