crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__shape_numeric_op.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `shape < 'callable'`: expected number expression, got `callable`",
  "input": "shape < 'callable'"
}
